--- a/ifelse.html
+++ b/ifelse.html
@@ -4,6 +4,7 @@
 	<title>if else </title>
 </head>
 <body>
-	<script type="text/javascript" src="js/ifelse.js"></script>
+	<script type="text/javascript" src="js/ifelse.js">
+	</script>
 </body>
 </html>
